--- a/580 Project Functions.Rmd
+++ b/580 Project Functions.Rmd
@@ -6,23 +6,21 @@ output: github_document
 
 ```{r}
 library(dplyr)
+library(ggplot2)
 ```
 
 ```{r}
 # sample data for testing purposes
-# data <- starwars
+data <- starwars
 
 # This review function takes a data set and produces a summary table of the variables. The benefit of this is that the function only takes one argument, making it easy for the user to use. The summary output lists all the variables by row along with their class type, missing count, unique count, and proportion of unique values (a higher proportion means there are more unique values.)
 
-review <- function(data){
+review <- function (data){
   data <- data %>% select(-where(is.list))
   vars <- names(data)
-  variable_type <- sapply(vars,
-                        function(x) is(data[, x][[1]])[1])
-  missing_count <- sapply(vars,
-                        function(x) sum(!complete.cases(data[, x])))
-  unique_count <- sapply(vars,
-                       function(x) n_distinct(data[, x]))
+  variable_type <- sapply(vars, function(x) is(data[, x][[1]])[1])
+  missing_count <- sapply(vars, function(x) sum(!complete.cases(data[, x])))
+  unique_count <- sapply(vars, function(x) n_distinct(data[, x]))
   data_count <- nrow(data)
   tibble(variables = vars,
          class = variable_type,
@@ -30,8 +28,27 @@ review <- function(data){
          unique_count = unique_count,
          unique_proportion = unique_count / data_count)
 }
-
 review(data)
 ```
 
+```{r}
 
+# This split function takes a data set and separates each of the columns into its own variable.
+
+split <- function(data){
+  vars <- names(data)
+  data <- data %>% select(-where(is.list))
+  for(i in 1:ncol(data)){
+    print(data[, i])
+  }
+  for(i in 1:ncol(data)){
+    print(vars[i])
+  }
+}
+
+for (i in colnames(data)) {
+    assign(i, data[, i])
+}
+
+split(data)
+```
